concord_macros/tests/trybuild/fail/codegen_contract/stream_endpoint_execute_records.stderr
error[E0599]: the method `execute_records` exists for struct `PendingRequest<'_, StreamEndpointExecuteRecordsApiCx, EpDownloadHd3386a2ef42e80b9, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen_contract/stream_endpoint_execute_records.rs:16:28
   |
 5 | / api! {
 6 | |     client StreamEndpointExecuteRecordsApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Download
   | |________________- doesn't satisfy `<_ as Endpoint<StreamEndpointExecuteRecordsApiCx>>::Response = RecordStream<_>`
...
16 |       let _ = api.download().execute_records().await.unwrap();
   |                              ^^^^^^^^^^^^^^^ method cannot be called due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `<EpDownloadHd3386a2ef42e80b9 as concord_core::prelude::Endpoint<StreamEndpointExecuteRecordsApiCx>>::Response = RecordStream<_>`
